--- a/src/components/navbar2.css
+++ b/src/components/navbar2.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 1rem;
-    z-index: 2;
+    z-index: 1001;
     position: fixed;
     left: 0;
 }
@@ -14,7 +14,6 @@
     display: flex;
     list-style-type: none;
 }
-
 
 
 /* Button around text in mobile menu and navbar*/
@@ -93,7 +92,64 @@ li {
 .fas.fa-bars-dark {
     color: #F4F4F4;
 }
-  
+
+/* Social Icons */
+.social,
+.social-dark {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 240px;
+}
+
+.social-link,
+.social-link-dark {
+    font-size: 24px;
+    margin-bottom: 24px;
+    margin-top: 24px;
+    transition: 0.3s ease-in-out;
+}
+
+.social-link.facebook i {
+    color: #3b5998; 
+}
+
+.social-link.instagram i {
+    color: #d62976;
+}
+
+.social-link.github i,
+.social-link.github-dark i {
+    color: black;
+    transform: scale(1);
+
+}
+
+.social-link.github-dark i {
+    color: white;
+}
+
+.social-link.twitter i {
+    color: #00acee;
+    transform: scale(1);
+
+}
+
+.social-link.linkedin i {
+    color: #0072b1;
+    transform: scale(1);
+
+}
+
+.social-link.facebook:hover,
+.social-link.instagram:hover,
+.social-link.github:hover,
+.social-link.twitter:hover,
+.social-link.linkedin:hover,
+.social-link.github-dark:hover {
+    transform: scale(1.15);
+}
+
 
 
 /* For desktop view */
@@ -125,7 +181,7 @@ li {
         border-radius: 25px;
         z-index: 10;
     }
-
+  
     .mobile-menu-dark {
         background-color: rgba(0, 0, 0, 0.5);
     }
@@ -226,66 +282,7 @@ li {
         align-items: center;
         text-align: center;
     }
-      
 
-    /* Social Icons */
-    .social-icons {
-        display: flex;
-        margin-bottom: 1rem;
-        margin-top: 1rem;
-        transition: 0.3s ease-out;
-    }
-      
-    .social-icons .icon {
-        flex-basis: 50%; 
-        max-width: 50%;
-        margin-bottom: 0.5rem;
-    }
-
-    .social-icon-link.facebook i {
-        color: #3b5998;
-        transform: scale(1);
-        transition: 0.3s ease-out;
-    }
-    
-    .social-icon-link.instagram i {
-        color: #d62976;
-        transform: scale(1);
-        transition: 0.3s ease-out;
-    }
-    
-    .social-icon-link.github i,
-    .social-icon-link.github-dark i {
-        color: black;
-        transform: scale(1);
-        transition: 0.3s ease-out;
-    }
-
-    .social-icon-link.github-dark i {
-        color: white;
-    }
-
-    .social-icon-link.twitter i {
-        color: #00acee;
-        transform: scale(1);
-        transition: 0.3s ease-out;
-    }
-    
-    .social-icon-link.linkedin i {
-        color: #0072b1;
-        transform: scale(1);
-        transition: 0.3s ease-out;
-    }
-
-    .social-icon-link.facebook:hover,
-    .social-icon-link.instagram:hover,
-    .social-icon-link.github:hover,
-    .social-icon-link.twitter:hover,
-    .social-icon-link.linkedin:hover,
-    .social-icon-link.github-dark:hover {
-        transform: scale(1.15);
-        transition: 0.3s ease-out;
-    }
 
     .mobile-menu button {
         margin: 1rem;
@@ -330,23 +327,18 @@ li {
 
 
 @media screen and (max-width: 600px) {
-    .social-icons .icon {
-      flex-basis: 100%;
-      max-width: 100%; 
-    }
 
     .fas.fa-times, 
     .fas.fa-times-dark {
         width: 90%;
     }
-}
 
-@media screen and (max-width: 400px) {
-    .fas.fa-times, 
-    .fas.fa-times-dark {
+    .mobile-menu button {
+        margin: 2rem;
         width: 80%;
     }
 }
+
 
 @media screen and (max-height: 800px) {
 
@@ -358,6 +350,7 @@ li {
         align-items: center;
         text-align: center;
     }
+
 }
 
 @media screen and (max-height: 600px) {
@@ -370,6 +363,7 @@ li {
         align-items: center;
         text-align: center;
     }
+    
 }
 
 @media screen and (max-height: 400px) {
