changed auth and modified to be less declaritive

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .about {
-  background-image: url('/mnt/Backup/react-website/public/images/img-1.jpg');
+  background-image: url('../public/images/img-1.jpg');
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
@@ -25,7 +25,7 @@
 }
 
 .sign-up {
-  background-image: url('/mnt/Backup/react-website/public/images/img-8.jpg');
+  background-image: url('../public/images/img-8.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
