--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,6 +1,6 @@
 .header-container,
 .header-container-dark {
-  background: url('/mnt/Backup/react-website/public/images/fashion.jpg') no-repeat;
+  background: url('../../public/images/fashion.jpg') no-repeat;
   height: 100vh;
   width: 100%;
   display: flex;
