--- a/src/components/frontend/styles.css
+++ b/src/components/frontend/styles.css
@@ -1,15 +1,8 @@
-@font-face {
-    font-family: 'JetBrainsMono Nerd Font';
-    src: url('../../../public/fonts/JetBrainsMono/JetBrainsMono-Bold.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-  }
-
 * * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'PT Sans', sans-serif;
-    /*font-family: 'JetBrainsMono Nerd Font ', sans-serif;*/
+    /*font-family: 'DM Sans', sans-serif;*/
 }
   
